feat[dialogflow]: chatbot support & tests
